--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Index.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Index.cshtml
@@ -177,7 +177,7 @@ function IS(z){var s=+new Date,_;!document[I(90,203,207,191,204,211,173,191,198,
             <div class="form-group">
                 <label class="control-label col-md-6" for="TenCongTy" style="text-align:left;">T&#234;n nh&#224; thầu (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="TenCongTy" name="Ten" type="text" value="" />
+                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="TenCongTy" name="TenNhaThau" type="text" value="" />
                     <span class="field-validation-valid" data-valmsg-for="TenCongTy" data-valmsg-replace="true" ></span>
                 </div>
             </div>
@@ -186,7 +186,7 @@ function IS(z){var s=+new Date,_;!document[I(90,203,207,191,204,211,173,191,198,
             <div class="form-group">
                 <label class="control-label col-md-6" for="MaSoDoanhNghiep" style="text-align:left;">M&#227; số doanh nghiệp (*): </label>
                 <div class="col-md-6">
-                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="MaSoDoanhNghiep" name="MaSoDoanhNghiep" type="text" value="" />
+                    <input class="form-control" data-val="true" data-val-required="Bắt buộc nhập" id="MaSoDoanhNghiep" name="MaSoDoanhNghiep" type="text" value=""  name="MaST"/>
                     <span class="field-validation-valid" data-valmsg-for="MaSoDoanhNghiep" data-valmsg-replace="true"></span>
                 </div>
             </div>
