--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -51,7 +51,7 @@
                 <div class="sidebar-brand-icon rotate-n-15">
                     <i class="fas fa-laugh-wink"></i>
                 </div>
-                <div class="sidebar-brand-text mx-3">AppMvc.Net</div>
+                <div class="sidebar-brand-text mx-3">VNPT-VNCare</div>
             </a>
 
 
@@ -137,7 +137,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; AppMvc.Net 2022</span>
+                        <span>Copyright &copy; VNPT-VNCare</span>
                     </div>
                 </div>
             </footer>
