--- a/Areas/Product/Views/ViewProduct/Index.cshtml
+++ b/Areas/Product/Views/ViewProduct/Index.cshtml
@@ -62,7 +62,8 @@ else
                 <a class="card-link" asp-controller="ViewProduct" asp-action="Detail" asp-route-productslug="@product.Slug">
                     Chi tiết
                 </a>
-                <a asp-action="AddToCart" asp-route-productid="@product.ProductID" class="btn btn-primary ml-4">Đặt hàng</a>
+                @* <a asp-action="AddToCart" asp-route-productid="@product.ProductID" class="btn btn-primary ml-4">Đặt hàng</a> *@
+                 <a asp-action="Index" asp-controller="/form2"  class="btn btn-primary ml-4">Đấu Thầu</a>
             </div>
         </div>
     }
