--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Index.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Index.cshtml
@@ -1,3 +1,7 @@
+
+<h2>Thông Tin Nhà Thầu</h2>
+
+<p><strong>Tên Nhà Thầu:</strong> @Model.TenNhaThau</p>
 <h4 style="color:purple">
     <b>Tên:</b>    @ViewBag.Ten <br />
     <b>Name:</b>  @ViewBag.Nam <br />
