--- a/Areas/Identity/Views/Account/Register.cshtml
+++ b/Areas/Identity/Views/Account/Register.cshtml
@@ -7,11 +7,11 @@
 }
 <style>
     .bg-register-image {
-        background-image: url(https://xuanthulab.net/public/img/logo.png);
+        background-image: url(https://vnpt.com.vn/design/images/logo-vnpt.jpg?w=130);
         background-position: center;
         background-repeat: no-repeat;
         background-size: contain;
-        background-color: black;
+        background-color: white;
     }
 </style>
 
