--- a/Areas/Product/Views/ViewProduct/Detail.cshtml
+++ b/Areas/Product/Views/ViewProduct/Detail.cshtml
@@ -35,9 +35,9 @@
     </div>
     <div>
         <p>
-            Giá: <strong>@Model.Price</strong>
+            <!-- Giá: <strong>@Model.Price</strong> -->
             @* <a asp-action="AddToCart" asp-route-productid="@Model.ProductID"  class="btn btn-danger">Đấu thầu</a> *@
-            <a asp-action="Index" asp-controller="/form2"  class="btn btn-danger">Đấu Thầu</a>
+            <a asp-action="Index" asp-controller="/trangthongtin"  class="btn btn-danger">Đấu Thầu</a>
         </p>
     </div>
     <div>
