--- a/Views/Shared/_LayoutAdmin.cshtml
+++ b/Views/Shared/_LayoutAdmin.cshtml
@@ -134,13 +134,17 @@
             <!-- End of Main Content -->
 
             <!-- Footer -->
-            <footer class="sticky-footer bg-white">
-                <div class="container my-auto">
-                    <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; VNPT-VNCare</span>
-                    </div>
-                </div>
-            </footer>
+            <footer style="background-color: #0779c9">
+                <div class="container">
+                  <div style="text-align: center;"><strong style="font-size: 9pt;">TRANG THÔNG TIN ĐIỆN TỬ</strong></div>
+                    <div style="font-weight: bold; text-align: center;"><strong style="font-size: 9pt;">TRUNG TÂM Y TẾ THÀNH PHỐ VŨNG TÀU</strong></div>
+                    <div style="text-align: center;">&nbsp;</div>
+                    <div style="text-align: center;"><span style="font-size: 9pt;">Cơ quan chủ quản: Sở Y tế tỉnh Bà Rịa - Vũng Tàu</span></div>
+                    <div style="text-align: center;"><span style="font-size: 9pt;">Địa chỉ: 278 Lê Lợi, Phường 7, Thành phố Vũng Tàu, tỉnh Bà Rịa - Vũng Tàu&nbsp;</span></div>
+                    <div style="text-align: center;"><span style="font-size: 9pt;">&nbsp;</span><span style="font-size: 9pt;">Điện thoại: 0254 3838 348 - Fax: <span style="text-align: center;">0254 3838 348</span></span></div>
+                    <div style="text-align: center;"><span style="font-size: 9pt; text-align: center;">&nbsp;</span><span style="font-size: 9pt;">Ghi rõ nguồn:&nbsp;http://ttytvungtau-soyte.baria-vungtau.gov.vn khi sử dụng thông tin trên Trang thông tin này. <a href="http://0.0.0.0:8091/login">Quản trị</a></span></div>
+                 </div>
+            </footer> 
             <!-- End of Footer -->
 
 
