--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,9 +4,42 @@
     var products = ViewBag.products as IQueryable<App.Models.Product.ProductModel>;
     var posts = ViewBag.posts as IQueryable<App.Models.Blog.Post>;
 }
+@if (TempData["ConfirmationMessage"] != null)
+    {
+        <div class="alert alert-success">
+            @TempData["ConfirmationMessage"]
+        </div>
+    }
 
+</html>
 <partial name="_AlertMessage" />
 
+<h2>Tin tức</h2>
+
+@foreach (var post in posts)
+{
+    <div class="media border-bottom mb-3 pb-3">
+        <img src="/contents/nophoto.png" class="mr-3" style="width: 0px">
+        <div class="media-body">
+            <h5 class="mt-0">
+                <a asp-area="Blog" asp-controller="ViewPost" asp-action="Detail" asp-route-postslug="@post.Slug">
+                    @post.Title
+                </a>
+            </h5>
+            @post.Description
+            <div>
+                Chủ đề:
+                <strong class="text-danger">
+                    @post.PostCategories.FirstOrDefault()?.Category.Title
+                </strong> 
+            </div>
+            <div class="author-row">
+                 Tác giả: <strong>@post.Author.UserName</strong> |
+                 Ngày cập nhật : <i>@post.DateUpdated.ToShortDateString()</i>
+            </div>
+        </div>
+    </div>
+}   
 <h2>Các dự án</h2>
 <div class="d-flex flex-wrap justify-content-between">
     @foreach (var product in products)
@@ -27,7 +60,7 @@
                 <p>
                     <strong class="text-danger">@product.ProductCategoryProducts.FirstOrDefault()?.Category.Title</strong>
                 </p>
-                <p>Giá: <strong>@product.Price</strong></p>
+                <!-- <p>Giá: <strong>@product.Price</strong></p> -->
                 
             </div>
             <div class="card-body">
@@ -36,35 +69,11 @@
                 </a>
                 @* <a asp-action="AddToCart" asp-area="Product"  asp-controller="ViewProduct" asp-route-productid="@product.ProductID" class="btn btn-primary ml-4">Đấu Thầu</a> *@
                 @* <a asp-action="Index" asp-controller="/form2"  class="btn btn-primary ml-4">Thông Tin Nhà Thầu</a> *@
-                <a asp-action="Index" asp-controller="/form2"  class="btn btn-primary ml-4">Đấu Thầu</a>
+                <a asp-action="Index" asp-controller="/trangthongtin"  class="btn btn-primary ml-4">Đấu Thầu</a>
             </div>
         </div>
     }
 </div>
-<h2>Tin tức</h2>
 
-@foreach (var post in posts)
-{
-    <div class="media border-bottom mb-3 pb-3">
-        <img src="/contents/nophoto.png" class="mr-3" style="width: 80px">
-        <div class="media-body">
-            <h5 class="mt-0">
-                <a asp-area="Blog" asp-controller="ViewPost" asp-action="Detail" asp-route-postslug="@post.Slug">
-                    @post.Title
-                </a>
-            </h5>
-            @post.Description
-            <div>
-                Chủ đề:
-                <strong class="text-danger">
-                    @post.PostCategories.FirstOrDefault()?.Category.Title
-                </strong> 
-            </div>
-            <div class="author-row">
-                 Tác giả: <strong>@post.Author.UserName</strong> |
-                 Ngày cập nhật : <i>@post.DateUpdated.ToShortDateString()</i>
-            </div>
-        </div>
-    </div>
-}
+
 
