--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -21,12 +21,11 @@ body {
   width: 300%;
   white-space: nowrap;
   line-height: 60px;
+  
   /* Vertically center the text there */
 }
 
-.app-navbar {
-  background: #122153;
-}
+
 .app-navbar .text-dark {
   color: #b9c3ce !important;
 }
@@ -68,7 +67,7 @@ body {
 }
 
 .contact-firstcol {
-  background-color: #1b3896;
+  background-color: #0779c9;
   color: white;
   text-align: center;
   border-top-left-radius: 15px;
@@ -87,8 +86,8 @@ body {
   font-weight: 700;
 }
 .formcontact .btn-primary {
-  background-color: #1b3896 !important;
-  border-color: #1b3896;
+  background-color: #0779c9 !important;
+  border-color: #0779c9;
 }
 
 .app-footer {
@@ -119,4 +118,169 @@ body {
 }
 .photodetail:hover span {
   display: block;
+}
+/* .app-navbar {
+  background: #F2F5FA url(https://storage-vnportal.vnpt.vn/sme-g1/themes/ttytvungtau/panelstylesheet/top-twocolumn-footer/images/body.jpg) repeat-x scroll 0 0;
+  text-align: center;
+} */
+/* 
+.app-navbar   {
+  background: #F2F5FA url(https://storage-vnportal.vnpt.vn/sme-g1/themes/ttytvungtau/panelstylesheet/top-twocolumn-footer/images/body.jpg) repeat-x scroll 0 0;
+  background-image: url(https://storage-vnportal.vnpt.vn/sme-g1/themes/ttytvungtau/panelstylesheet/top-twocolumn-footer/images/body.jpg);
+  background-position-x: 0px;
+  background-position-y: 0px;
+  background-size: initial;
+  background-attachment: scroll;
+  background-origin: initial;
+  background-clip: initial;
+  background-color: rgb(242, 245, 250);
+  text-align: center;
+} */
+.app-navbar::before {
+  content: "";
+  background: url(https://storage-vnportal.vnpt.vn/sme-g1/themes/ttytvungtau/panelstylesheet/top-twocolumn-footer/images/body.jpg) repeat-x scroll 0 0;
+  filter: blur(1px); /* Điều chỉnh mức độ mờ dựa vào số pixel bạn muốn */
+  opacity: 1; /* Điều chỉnh độ trong suốt */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+
+.TopBar {
+  background: #eee none repeat scroll 0 0;
+    border-radius: 0 0 10px 10px;
+    margin: 0 auto 2px;
+    text-align: justify;
+    width: 1150px;
+}
+.MultiFunctionControl marquee {
+  table-layout: fixed;
+  display: table;
+}
+.DropdownMenu {
+  background: rgba(0, 0, 0, 0) url(https://storage-vnportal.vnpt.vn/sme-g1/themes/ttytvungtau/uidropdownmenu/images/menutop.png) repeat-x scroll left top;
+  border-radius: 0 0 10px 10px;
+  height: 37px;
+  margin: 0 auto 2px;
+  width: 100%;
+}
+.DropdownMenu .MenuList {
+  width: 100%;
+}
+.DropdownMenu ul {
+  list-style: outside none none;
+  margin: 0;
+  padding: 0;
+}
+.DropdownMenu * {
+  text-rendering: geometricprecision;
+}
+.DropdownMenu .MenuList .TopMenuActive, .TopMenu:hover {
+  height: 30px;
+  position: relative;
+}
+.DropdownMenu .MenuList li {
+  display: block;
+  float: left;
+  height: 35px;
+  list-style: outside none none;
+}
+.DropdownMenu .MenuList .TopMenuActive a {
+  color: #ce1126;
+  font: bold 15px/35px "Segoe UI",Tahoma,Verdana;
+  text-decoration: none;
+}
+.DropdownMenu .MenuList .TopMenu .HasChildren, .TopMenuActive .HasChildren {
+  display: block;
+  height: 34px;
+}
+.DropdownMenu .MenuList .Dropdown {
+  background: #ecf6ff none repeat-x scroll left top;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+  color: #111111;
+  display: inline-block;
+  left: 5px;
+  position: absolute;
+  text-align: left;
+  top: 100%;
+  width: auto;
+  z-index: 1000;
+}
+.DropdownMenu ul {
+  list-style: outside none none;
+  margin: 0;
+  padding: 0;
+}
+.DropdownMenu .MenuList li {
+  display: block;
+  float: left;
+  height: 35px;
+  list-style: outside none none;
+}
+.DropdownMenu .MenuList .Dropdown {
+  background: #ecf6ff none repeat-x scroll left top;
+  box-shadow: 0 6px 10px rgba(0, 0, 0, 0.3);
+  color: #111111;
+  display: inline-block;
+  left: 5px;
+  position: absolute;
+  text-align: left;
+  top: 100%;
+  width: auto;
+  z-index: 1000;
+}
+
+
+.DropdownMenu .MenuList .TopMenu {
+  float: left;
+  height: 35px;
+  padding: 0 30px;
+  position: relative;
+  border-left: 1px solid #B6DBEB;
+}
+.SingleSearch .SearchBox .Text {
+  background: #fff none repeat scroll 0 0;
+  border: 1px solid #999;
+  border-radius: 10px 0 0 10px;
+  color: #000;
+  float: left;
+  font: italic 9pt Arial;
+  height: 23px!important;
+  margin: 0;
+  padding: 0 6px;
+  width: 145px;
+}
+.SingleSearch .SearchBox {
+  display: flex;
+  align-items: center;
+}
+
+.SingleSearch .SearchBox {
+  position: relative;
+  left: 730px;
+  float: right;
+  top: 175px;
+}
+.SingleSearch .SearchBox .Button {
+  background: #ce1126 url(https://storage-vnportal.vnpt.vn/sme-g1/themes/ttytvungtau/uisinglesearch/images/icons.png) no-repeat scroll center center;
+  border-radius: 0 10px 10px 0;
+  display: inline-block;
+  height: 23px;
+  transition: none 0s ease 0s;
+  width: 23px;
+}
+
+a {
+  color: #424242;
+  font: 13px "Segoe UI",Tahoma,Verdana;
+  text-decoration: none;
+}
+.DropdownMenu .MenuList .TopMenu a {
+  color: #0677c7;
+  font: bold 15px/35px "Segoe UI",Tahoma,Verdana;
+  text-decoration: none;
 }
