--- a/Areas/Files/Views/FileManager/Index.cshtml
+++ b/Areas/Files/Views/FileManager/Index.cshtml
@@ -9,7 +9,7 @@
             var myCommands = elFinder.prototype._options.commands;
             
             // Not yet implemented commands in elFinder.NetCore
-            var disabled = ['callback', 'chmod', 'editor', 'netmount', 'ping', 'search', 'zipdl', 'help']; 
+            var enabled = ['callback', 'chmod', 'editor', 'netmount', 'ping', 'search', 'zipdl', 'help']; 
             elFinder.prototype.i18.en.messages.TextArea = "Edit";
 
             $.each(disabled, function (i, cmd) {
