--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Trang Đấu Thầu";
 
     var products = ViewBag.products as IQueryable<App.Models.Product.ProductModel>;
     var posts = ViewBag.posts as IQueryable<App.Models.Blog.Post>;
