--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/dsNhaThau.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/dsNhaThau.cshtml
@@ -69,9 +69,9 @@
             </td>
             
             <td>
-                <a href="dsNhaThau/detail/@item.ID" class="btn btn-primary" >Xem zzz </a> | 
+                <a href="dsNhaThau/detail/@item.ID" class="btn btn-primary" >Xem chi tiết </a> | 
                 <a asp-action="Details1" class="btn btn-primary"asp-route-id="@item.ID">Xem</a> |
-                <a asp-action="Delete1" class="btn btn-primary"asp-route-id="@item.ID">Xóa</a>  
+                <a asp-action="dsNhaThau/delete/@item.ID" class="btn btn-primary"asp-route-id="@item.ID">Xóa</a>  
                 
             </td>
            
