--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Details1.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Details1.cshtml
@@ -1,4 +1,3 @@
-@model App.Models.DKThaus.DKThau
 @using App.Menu
 @inject AdminSidebarService _AdminSidebarService
 
@@ -9,15 +8,23 @@
 
 <h1>@ViewData["Title"]</h1>
 
+@foreach (var item in @ViewBag.dsach_thau) {
+    <a>
+        @Html.DisplayFor(item => item)
+    </a>
+}
+
+
 <div>
     <hr />
+    @Html.DisplayFor(model => model)
     <dl class="row">
-        <dt class = "col-sm-2">
+        @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.TenNhaThau)
         </dt>
          <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DT)
-        </dd>
+        </dd> *@
        @* <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Email)
         </dt>
