--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/dsNhaThau.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/dsNhaThau.cshtml
@@ -70,8 +70,8 @@
             
             <td>
                 <a href="dsNhaThau/detail/@item.ID" class="btn btn-primary" >Xem chi tiết </a> | 
-                <a asp-action="Details1" class="btn btn-primary"asp-route-id="@item.ID">Xem</a> |
-                <a asp-action="dsNhaThau/delete/@item.ID" class="btn btn-primary"asp-route-id="@item.ID">Xóa</a>  
+                <a href="dsNhaThau/delete/@item.ID" class="btn btn-primary" >Xóa chi tiết </a> |
+               
                 
             </td>
            
