--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Details1.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Details1.cshtml
@@ -1,5 +1,6 @@
 @using App.Menu
 @inject AdminSidebarService _AdminSidebarService
+@model App.Models.ThongTinNhaThaus.ThongTinNhaThau
 
 @{
     ViewData["Title"] = "Thông tin nhà thầu";
@@ -8,19 +9,28 @@
 
 <h1>@ViewData["Title"]</h1>
 
+@* @foreach (var item in @ViewBag.dataNguoiDKDuAn) {
+    
+} *@
+
 @foreach (var item in @ViewBag.dsach_thau) {
-    <a>
-        @Html.DisplayFor(item => item)
-    </a>
+    @* <a>
+        Tên nhà thầu: @item.TenNhaThau
+    </a> *@
 }
 
 
 <div>
     <hr />
-    @Html.DisplayFor(model => model)
+    @* @Html.DisplayFor(model => model) *@
+    Tên: @Model.Ten <br/>
+    Ảnh: @Model.Anh <br/>
+    Ngày: @Model.Ngay <br/>
+    @Model.MoTa <br/>
+    @Model.TenDA <br/>
     <dl class="row">
         @* <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TenNhaThau)
+            @Html.DisplayNameFor(model => model.Ten)
         </dt>
          <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DT)
