--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/dsNhaThau.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/dsNhaThau.cshtml
@@ -69,8 +69,8 @@
             </td>
             
             <td>
-                <a href="dsNhaThau/detail/@item.ID" class="btn btn-primary" >Xem chi tiết </a> | 
-                <a href="dsNhaThau/delete/@item.ID" class="btn btn-primary" >Xóa chi tiết </a> |
+                <a href="dsNhaThau/detail/@item.ID" class="btn btn-primary" >Xem  </a> | 
+                <a href="dsNhaThau/delete/@item.ID" class="btn btn-primary" >Xóa  </a> 
                
                 
             </td>
