Chi tiết nhà thầu  done

--- a/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Details1.cshtml
+++ b/Areas/ThongTinNhaThau/Views/ThongTinNhaThau/Details1.cshtml
@@ -76,7 +76,7 @@
                 @Model.NguoiLienHe
             </td>
             <td>
-                @Model.Email
+                @Model.EmailLH
             </td>
            @*  <td>
                 @Html.DisplayFor(modelItem => item.Email)
